--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Nav Links -->
         <nav class="hidden md:flex space-x-6">
           <a href="#home" class="text-gray-700 hover:text-blue-600">Home</a>
-          <a href="#about" class="text-gray-700 hover:text-blue-600">About Us</a>
+          <a href="#about" class="text-gray-700 hover:text-blue-600">About</a>
           <a href="#services" class="text-gray-700 hover:text-blue-600">Services</a>
           <a href="#testimonials" class="text-gray-700 hover:text-blue-600">Testimony</a>
           <a href="#contact" class="text-gray-700 hover:text-blue-600">Contact Us</a>
